Added tagsId to NewsDto and validation for them. Added tag validation aspect